# chip-8-emulator

./: CMakeLists.txt  readme.md
src/: CLIdisplay.cpp  CLIdisplay.hpp  Chip8.cpp  Chip8.hpp  Main.cpp  Platform.cpp  Platform.hpp
